[package]
name = "auth-web"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
#dioxus-fullstack = { workspace = true }

#Run on server
axum = { workspace = true, optional = true  }
tokio = { workspace = true , features = ["full"], optional = true}

shared-shared-app = { workspace = true,  optional = true }

features-auth-remote = { workspace = true,  optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server" ,"axum", "tokio", "features-auth-remote", "shared-shared-app"]
