[package]
name = "auth-web"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
dioxus-i18n = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unic-langid = { workspace = true }
#dioxus-fullstack = { workspace = true }

#Run on server
axum = { workspace = true, optional = true  }
uuid = { workspace = true, optional = true  }
dotenv = { workspace = true, optional = true  }
tokio = { workspace = true , features = ["full"], optional = true}
tower-sessions = { workspace = true , optional = true}
time = { workspace = true , optional = true}
tracing = { workspace = true}

shared-shared-app = { workspace = true,  optional = true }

features-auth-remote = { workspace = true,  optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server" ,"axum", "dotenv", "tokio",  "features-auth-remote", "shared-shared-app", "time", "tower-sessions", "uuid"]
