
[package]
name = "app-gateway"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
# pingora can build only on Linux
pingora-core = { version = "0.5.0" }
pingora-proxy = { version = "0.5.0" }
pingora-http = { version = "0.5.0" }
pingora = { version = "0.5.0", features = ["lb"] }
clap = { version = "3.2.25", features = ["derive"] }
serde_yaml = "0.9.34"
serde = {  workspace = true , features = ["derive"] }
serde_json = { workspace = true }
wildmatch = "2.4.0"
bytes = "1.0"
http = "1.0.0"
arc-swap = "1.7.1"
once_cell = "1.20.2"
dashmap = "6.1.0"
crossbeam-epoch = "0.9.18"
rand = "0.8.5"
pcre2 = "0.2.9"
base64 = "0.22.1"
uuid = { workspace = true, features = ["v4"] }


tracing-subscriber = { workspace = true}
tracing = { workspace = true }

[build-dependencies]
figlet-rs = "0.1.5"


# Build from gateway Dakia at https://github.com/ats1999/dakia