
[package]
name = "app-gateway"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
arc-swap = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
crossbeam-epoch = { workspace = true }
dashmap = { workspace = true }
dotenv = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pcre2 = { workspace = true }
pingora = { workspace = true, features = ["lb"] }
pingora-core = { workspace = true }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true }
rand = { workspace = true }
serde = {  workspace = true , features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true}
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wildmatch = { workspace = true }

shared-shared-app = { workspace = true }

features-auth-remote = { workspace = true }

# Build from gateway Dakia at https://github.com/ats1999/dakia