[package]
name = "features-auth-entities"
edition = "2021"
version.workspace = true
authors.workspace = true

[lib]
name = "features_auth_entities"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true , features = ["sqlx-postgres", "runtime-actix-native-tls"]}

shared-shared-macro = { workspace = true }
shared-shared-data-core = { workspace = true }

