[package]
name = "features-auth-migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "features_auth_migrations"
path = "src/lib.rs"

[[bin]]
name = "migrations_auth"
path = "src/main.rs"

[dependencies]
async-std = { workspace = true }
sea-orm-migration = { workspace = true , features = ["sqlx-postgres"]}

features-auth-entities = { workspace = true }