[package]
name = "features-auth-model"
edition = "2021"
version.workspace = true
authors.workspace = true
publish = false

[lib]
name = "features_auth_model"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { workspace = true, features = ["chrono", "axum_extras"] }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

shared-shared-data-core = { workspace = true }
shared-shared-data-auth =  { workspace = true }
shared-shared-macro = { workspace = true }
features-auth-entities = { workspace = true }
