[package]
name = "features-booking-entities"
edition = "2021"
version.workspace = true
authors.workspace = true

[lib]
name = "features_booking_entities"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true , features = ["sqlx-postgres"]}
rust_decimal = { workspace = true }

shared-shared-macro = { workspace = true }
shared-shared-data-core = { workspace = true }
