[package]
name = "features-booking-service"
edition = "2021"
version.workspace = true
authors.workspace = true

[lib]
name = "features_booking_service"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true , features = ["sqlx-postgres"]}
tracing = { workspace = true }
uuid = { workspace = true }

shared-shared-data-core = { workspace = true }
shared-shared-data-error = { workspace = true }

features-booking-entities = { workspace = true }
features-booking-model = { workspace = true }
features-booking-repo = { workspace = true }
